uMMORPG_HeadInfo

HeadInfo shows the name of the entity on a WorldSpace Canvas/Panel instead the text mesh.
It also displays health status if the entity is the player's target,
as a health bar under the name. 
In addition, you can attack the target with the Q key, if you press again, the attack mode will be terminated and the attack will be stopped. 
The head info panel has three different states.

    1. The name is always displayed.
    2. The target is selected, a white target icon and the health bar is displayed.
    3. The target is attacked by the player, the target icon changes color to red and the health bar is still displayed.



v0.1
	HeadInfo shows the name of the entity on a WorldSpace Canvas/Panel;
	Displays health status if the entity is the player's target;
	pressing key Q Attack mode, pressing again key Q stop attacking;
	Visual showing of three states, normal, selected and attacking;

v0.2
	using the RendererExtentions to check if the HeadInfo panel in the view of the Camera and needed to face the camera;
	Now the HeadInfo panel dosn`t block mouse clicks if you want to select something behind it
	The guild names are now displayed in the panel as well
	
	